103-IA-en-RaspberryPi/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ia-pi
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: ia-pi
spec:
  ports:
    - port: 5678
  selector:
    app: n8n
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ia-pi
spec:
  ports:
    - port: 11434
  selector:
    app: ollama
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: webui
  namespace: ia-pi
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: webui
  type: ClusterIP
